# python-cueclient

./: .coveragerc  .gitignore  .gitreview  .testr.conf  MANIFEST.in  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
cueclient/: __init__.py  client.py  controller.py  utils.py  version.py
cueclient/osc/: plugin.py
cueclient/resources/schemas/v1/: cluster.json
cueclient/tests/: __init__.py  base.py  common.py  fixture_data.py  utils.py
cueclient/tests/unit/v1/: test_clusters.py
cueclient/tests/v1/: test_clusters.py
cueclient/v1/: client.py  clusters.py
cueclient/v1/cli/: clusters.py
doc/source/: command-line.rst  conf.py  contributing.rst  getting-started.rst  index.rst  python-bindings.rst
doc/source/man/: cue.rst
