[metadata]
name = python-cueclient
summary = MQaaS - Client
description-file =
    README.rst
license = Apache License, Version 2.0
author = Endre Karlson
author-email = endre.karlson@hp.com
home-page = https://launchpad.net/python-cueclient
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Topic :: Internet :: Message Queue

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    cueclient

[entry_points]
openstack.mq.v1 =
    mq_cluster_create = cueclient.v1.cli.clusters:CreateClusterCommand
    mq_cluster_list = cueclient.v1.cli.clusters:ListClustersCommand
    mq_cluster_show = cueclient.v1.cli.clusters:ShowClusterCommand
    mq_cluster_set = cueclient.v1.cli.clusters:SetClusterCommand
    mq_cluster_delete = cueclient.v1.cli.clusters:DeleteClusterCommand

openstack.cli.extension =
    mq = cueclient.osc.plugin


[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = cueclient/locale
domain = cueclient

[update_catalog]
domain = cueclient
output_dir = cueclient/locale
input_file = cueclient/locale/cueclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = cueclient/locale/cueclient.pot

[wheel]
universal = 1
