[metadata]
name = python-cueclient
summary = Message Broker Provisioning Service Cue Client
description-file =
    README.rst
license = Apache License, Version 2.0
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    cueclient

[entry_points]
openstack.mb.v1 =
    message-broker_cluster_create = cueclient.v1.cli.clusters:CreateClusterCommand
    message-broker_cluster_list = cueclient.v1.cli.clusters:ListClustersCommand
    message-broker_cluster_show = cueclient.v1.cli.clusters:ShowClusterCommand
    message-broker_cluster_set = cueclient.v1.cli.clusters:SetClusterCommand
    message-broker_cluster_delete = cueclient.v1.cli.clusters:DeleteClusterCommand

openstack.cli.extension =
    mb = cueclient.osc.plugin


[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = cueclient/locale
domain = cueclient

[update_catalog]
domain = cueclient
output_dir = cueclient/locale
input_file = cueclient/locale/cueclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = cueclient/locale/cueclient.pot

[wheel]
universal = 1
